--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,99 @@
-body{
+body {
+  margin:0;
+  padding:0px;
+  background-color: grey;
 
 }
 
-.Logo{
+header {
+
+  background-color: black;
+  padding: 10px;
+  width:1920px;
+  height:70px;
+
 
 }
 
-nav ul {
+
+nav li {
+  margin-right: 250px;
+  margin-left:100px;
+  float: right;
+  margin-top: -10px;
+  
+
 
 }
 
-.MainPic{
+nav a:hover {
+  color:aqua;
+
 
 }
 
-.SubBanners{
-
+nav a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
 }
 
-.Featured{
+.MainPic {
+  margin-top: 30px;
+  text-align: center;
+  padding-bottom: 15px;
+}
 
+.SubBanners {
+  text-align: center;
+}
+
+.SubBanners img{
+  margin:10px;
+}
+
+.Featured {
+  float:left;
+  margin-top: 10px;
+  margin-left: 455px;
+  margin-right: 50px;
+}
+
+article{
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+h2{
+  font-size: 1.5em;
+
+  
+}
+
+
+
+
+
+.random{
+  text-align: center;
+  margin-left: 980px;
+  background-color: black;
+  width: 120px
+  ;
+  height: auto;
+  color: white;
+  font-weight: bold;
+  transition: background-color 350ms;
 }
 
 .random:hover{
-  
+  background-color: white;
+  color:aqua;
+
+}
+
+footer{
+  width:1200px;
+  height:100px
+
 }
